
[package]
name = "atlas4d_uni"
version = "0.2.1"
edition = "2021"
description = "Atlas4D Unique: spatiotemporal DB prototype with gRPC, binary segments, compactor, and Docker CI"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
h3o = "0.6"
clap = { version = "4", features = ["derive"] }
ordered-float = "4"
bincode = "1.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
async-stream = "0.3"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
